Fix product write endpoints — require ADMIN role instead of accidental permitAll